Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-53094

QComboBox doesn't change the item by using mouse wheel

    XMLWordPrintable

Details

    • 5e9e4ccdc363297f70d4ebfbbb3e279670eca553

    Description

      I used Qt4 in my application for a long time. In Qt4 QComboBox has a great feature that facilitates work with it:
      when my mouse pointer enters some combobox (become focused on it) I can change combobox item by using mouse wheel.
      After switching to Qt5.6 I noticed that this feature is broken down on MAC OS.
      And when I try to change combobox item by mouse wheel this has no effect.
      It can be easily reproduced on any Qt example on window with QComboBox.
      NOTE: On Linux and Windows this feature is still working .

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            andysh Andy Shaw
            vasyl18 vasyl18
            Votes:
            1 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes